--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 /* below is called a wild card (*). it means everything */
 * {
   box-sizing: border-box;
-  }
+}
 
 html,
 body {
   font-size: 1.13em;
   text-align: center;
   font-family: sans-serif;
+  margin: 0px;
 }
 
 .nav {
@@ -15,7 +16,7 @@ body {
   align-items: center;
   justify-content: space-between;
   color: antiquewhite;
-  font-size: 20px; 
+  font-size: 20px;
 }
 
 .links a {
@@ -23,14 +24,14 @@ body {
   padding-left: 10px;
   color: antiquewhite;
   font-size: 25px;
+  margin: 10px;
 }
 
 .holy-grail header,
 .holy-grail footer,
 .hg-sidebar,
 .holy-grail-content {
-  padding: 20px;
-  box-shadow: 0 2px 4px -2px black;
+  padding: 0px;
 }
 
 .holy-grail header {
@@ -39,18 +40,20 @@ body {
 
 footer {
   background-color: #684756;
+  color: antiquewhiteå;
 }
 
 .hg-sidebar {
-color: antiquewhite;
-background-color: #3D314A;
+  color: antiquewhite;
+  background-color: #3d314a;
 }
 
 .holy-grail {
   min-height: 100vh;
 }
 
-.holy-grail, .holy-grail-body {
+.holy-grail,
+.holy-grail-body {
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
@@ -58,32 +61,34 @@ background-color: #3D314A;
 
 .holy-grail-content {
   flex: 1 1 auto;
-  background-color: #96705B;
+  background-color: #96705b;
   color: antiquewhite;
-
 }
 
 .holy-grail-sidebar-1 {
   order: -1;
-  padding: 150px;
-
-} 
- @media (min-width: 768px) {
-  .holy-grail-body{
+  padding: 130px;
+}
+@media (min-width: 768px) {
+  .holy-grail-body {
     flex-direction: row;
   }
- }
+}
 
- .holy-grail-sidebar-2 {
-  padding: 150px;
- }
+.holy-grail-sidebar-2 {
+  padding: 130px;
+}
 
- .quotes {
+.quotes {
   text-align: left;
- }
+  margin: 10px;
+}
 
 .bigquote {
   text-align: center;
   padding: 90px;
   font-size: 45px;
+}
+.name {
+  margin: 10px;
 }
