--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ footer {
   text-align: left;
   margin: 10px;
 }
-=======
+
 
 .holy-grail-sidebar-2 {
   padding: 130px;
@@ -124,7 +124,7 @@ footer {
 }
 .name {
   margin: 20px;
-=======
+}
 .bigquote {
   text-align: center;
   padding: 90px;
